<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn Binary</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="between_levels_id">ca-app-pub-4175241364211124/6773561694</string>


    <string name="store">Store</string>
    <string name="practice">Practice</string>
    <string name="tools">Tools</string>
    <string name="learn_binary">Learn Binary</string>
    <string name="about">About</string>
    <string name="difficulty">Difficulty:</string>
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="hard">Hard</string>
    <string name="practice_selection_question">What would you like to practice?</string>
    <string name="binary">Binary</string>
    <string name="hex">Hex</string>

    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="help">Help</string>

    <string name="default_level">Level 0</string>
    <string name="level">Level </string>
    <string name="zero">0</string>
    <string name="start_playing_message">Press Start to start playing!</string>
    <string name="change_difficulty">Change Difficulty</string>

    <string-array name="difficulty_array">
        <item>Practice</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Insane</item>
    </string-array>

    <string name="choose">Choose</string>
</resources>
