<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundGrey"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/practice_selection_question"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="35sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binary"
        android:id="@+id/submitButton"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:onClick="onClickBinary" />

    <Button
        android:background="@color/buttonGrey"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex"
        android:id="@+id/helpButton"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:onClick="onClickHex" />
</LinearLayout>